# mcp-spine

./: .gitignore  BENCHMARKS.md  README.md  benchmark.py  pyproject.toml  server.json
.github/workflows/: ci.yml
configs/: example.spine.toml  quickstart.spine.toml
examples/: slack_filter.py
scripts/: translate_multi_mcp.py
spine/: audit.py  budget.py  cli.py  config.py  memory.py  plugins.py  proxy.py  state_guard.py  streamable_http.py  transport.py
spine/security/: __init__.py  commands.py  pii.py  secrets.py
tests/: test_budget.py  test_config.py  test_memory.py  test_plugins.py  test_postgres_pii_e2e.py  test_proxy_features.py  test_real_spine_mcp_e2e.py  test_security.py  test_state_guard.py  test_translate_multi_mcp.py
