[project]
name = "mcp-spine"
version = "0.2.0"
description = "Context Minifier & State Guard — MCP middleware proxy that reduces token waste, prevents tool attrition, and eliminates context rot"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Donnyb369" },
]
keywords = ["mcp", "llm", "proxy", "middleware", "security", "context", "tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "watchfiles>=0.21",
    "tomli>=2.0; python_version < '3.12'",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.2",
    "chromadb>=0.4",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/Donnyb369/mcp-spine"
Repository = "https://github.com/Donnyb369/mcp-spine"
Issues = "https://github.com/Donnyb369/mcp-spine/issues"

[project.scripts]
mcp-spine = "spine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["spine*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "S", "B", "I"]
ignore = ["S101", "S105", "S110", "S112", "E501", "B007", "B904", "B905", "E741", "F841", "S310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
